# Ignite

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  ignite.db  ignite.db-shm  ignite.db-wal  patch_clippy.py  patch_create.py  patch_handlers_test.patch  patch_router.py  patch_standard.patch  patch_test_expired.patch  patch_warning.py  setup_db.sh  update_error.patch  update_read.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml  gemini-review.yml  main.yml  pull-request.yml
.sqlx/: query-1522dd36e9d6e393f66278b43b2713877334d3118c432437056b9c95130865da.json  query-155162165594a211aebde6ce150f2ac6c39fde5f1364fdf1e725c14c0f73a073.json  query-164eb598e85be453a22bbb0a34fabb374d8414a808eb2a60f189c437863db0a5.json  query-34968e79eb0d8d0c41fb3b99fdef7c960baa864636e4865022187fc3fb610ca0.json  query-3ca64a1ccee31f06d2c28189230b837e8400dc3856573febec32328840804552.json  query-3f4f8eaac401d1937d70224c55f2b0dd927e9e062ec1da9ca60f5bc8ea8dda81.json  query-732fc9fdc979c0fce3ae3ec59d70ac6c5b1ba214de59579d1ad0d5f0fd9016f7.json  query-c951fb6b5d5a6cea3700453cb1d5213828ec01ca712ef53d6b2f3ca526cbb3cb.json  query-d30ca87502a563ece5f24d77b13daa760a36c1c76dc6a0f84f26b4e895d07c93.json  query-fdb10eff9460a9f7e6437fd772212c8bd52a10c544a6c7864f90304643bba554.json
backend/: .env  Cargo.toml  build.rs
backend/.sqlx/: query-9d3451c2801a03b90c259b3febcd958be87cdf363349e8fbdb2d634eefbaf5f2.json  query-a6dd48715a2f1716c7a98f24242e9c1fe89b0a17c6897998ab287069f8470b42.json  query-f751d837ae7ea6051a7a9b2b207a33bbf8b306e1257335a6d76e8f9edb72d719.json
backend/migrations/: 001_create_secrets.sql
backend/src/: error.rs  lib.rs  main.rs  router.rs  store.rs
backend/tests/: atomicity.rs  crypto.test.mjs
evolution/architecture/: _template.likec4  core.likec4
evolution/decisions/: 001-ignite.md  _template.md
evolution/foundations/: _template.md  (+4 more)
frontend/: Cargo.toml  Dioxus.toml  index.html  vercel.json  wrangler.jsonc
frontend/src/: api.rs  crypto.rs  main.rs  worker.ts
frontend/src/components/: icons.rs  layout.rs
frontend/src/views/: home.rs  mod.rs  read.rs  share.rs
shared/: Cargo.toml
src/: db.rs  error.rs  lib.rs  main.rs  migrate.rs  router.rs  router.rs.orig
static/: index.html
tests/: atomicity.rs  crypto.test.mjs
(+18 files in other folders)
