[package]
name = "ignite"
version = "0.1.0"
edition = "2021"
description = "A secure, local-first 'Burn After Reading' secret sharing service"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "fs", "util"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
tower_governor = "0.8"

# Graceful shutdown
tokio-util = "0.7"
tempfile = "3.26.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
