[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus-logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
getrandom = { version = "0.2", features = ["js"] }
shared = { path = "../shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement", 
    "Crypto", "SubtleCrypto", "CryptoKey", "AesGcmParams", "Algorithm", "TextEncoder",
    "Location", "History", "Clipboard", "Navigator"
] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7", features = ["desktop", "router"] }
aes-gcm = "0.10.3"
rand = "0.10.0"
arboard = "3.4.0"
tokio = { version = "1.37", features = ["full"] }

[target.aarch64-apple-darwin.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
